--- a/Scripts/Text_Analysis.ipynb
+++ b/Scripts/Text_Analysis.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "# Import csv data\n",
-    "raw_data = pd.read_csv('https://raw.githubusercontent.com/tmcamero/MSADS_Portfolio/main/IST%20736%3A%20Text%20Mining%3A%20Airline%20Tweet%20Analysis/Data/Tweets.csv?token=ARVQJIE5HCNP6TG2BCK3FJTAJZVSG')"
+    "raw_data = pd.read_csv('https://raw.githubusercontent.com/tmcamero/Airline_Tweet_Sentiment_Analysis/main/Tweets.csv')"
    ]
   },
   {
